# mercado_livre_v2

./: BUILD.bazel  README.md  build.gradle  settings.gradle
887857a0-cb49-4cbb-a6c0-2692f4c14e1d-tcplocalhost1883/: s-1.msg
src/main/java/euller/mercado_livre/client/admin/: AdminClient.java
src/main/java/euller/mercado_livre/client/admin/config/: Start.java  StartTest.java
src/main/java/euller/mercado_livre/client/admin/dto/: ClienteDTO.java  ProdutoDTO.java
src/main/java/euller/mercado_livre/client/admin/model/: Cliente.java  Produto.java
src/main/java/euller/mercado_livre/client/admin/service/: ClienteService.java  InputsService.java  ProdutoService.java  StartService.java
src/main/java/euller/mercado_livre/client/admin/view/: InputsTestView.java  InputsView.java
src/main/java/euller/mercado_livre/client/cliente/: ClienteClient.java
src/main/java/euller/mercado_livre/client/cliente/config/: Start.java  StartTest.java
src/main/java/euller/mercado_livre/client/cliente/model/: Pedido.java  PedidoDTO.java  Produto.java  ProdutoDTO.java
src/main/java/euller/mercado_livre/client/cliente/service/: InputsService.java  PedidoService.java  StartService.java
src/main/java/euller/mercado_livre/client/cliente/view/: InputsTestView.java  InputsView.java
src/main/java/euller/mercado_livre/ratis/: ClientRatis.java  ClienteRatis.java  MaquinaDeEstados.java  ReplicationClient.java  ReplicationServer.java  ServidorRatis.java  Start.java  StartReplication.java
src/main/java/euller/mercado_livre/server/admin/: AdminServer.java
src/main/java/euller/mercado_livre/server/admin/config/: Start.java
src/main/java/euller/mercado_livre/server/admin/model/: Cliente.java  Produto.java
src/main/java/euller/mercado_livre/server/admin/repository/: ClienteRepository.java  ProdutoRepository.java
src/main/java/euller/mercado_livre/server/cliente/: ClienteServer.java
src/main/java/euller/mercado_livre/testes/: StartTestClient.java
src/main/proto/: adminServer.proto  clientServer.proto
src/main/resources/db/p1/: 000011.sst  000028.sst  000033.sst  000240.sst  000247.sst  000260.sst  000271.sst  000274.sst  MANIFEST-000284
src/main/resources/db/p2/: 000038.sst  000041.sst  000044.sst  000050.sst  000056.sst  MANIFEST-000070
src/main/resources/db/p3/: 000014.sst  000035.sst  000047.sst  000053.sst  000059.sst  MANIFEST-000070
src/test/java/: TestAdmin.java  TestClient.java
(+39 files in other folders)
